# audio_study

./: .gitignore  Cargo.toml  STUDY_SERIES_PLAN.md
01_cpal/: .gitignore  Cargo.toml
01_cpal/example/: Cargo.toml  main.rs
01_cpal/examples/: Cargo.toml
01_cpal/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-10-review.md  chapter-11-mod-player-architecture.md  chapter-2-what-is-cpal.md  chapter-3-host-device-stream.md  chapter-4-callback-model.md  chapter-5-realtime-rules.md  chapter-6-sample-format.md  chapter-6b-crate-setup.md  chapter-7-sine-example.md  chapter-8-dsp-chain.md  chapter-9-debugging.md
02_mod_player_architecture/: .gitignore
02_mod_player_architecture/examples/: Cargo.toml
02_mod_player_architecture/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-10-architecture-checklist.md  chapter-11-examples.md  chapter-2-what-is-mod-player.md  chapter-3-boundaries-and-responsibilities.md  chapter-4-stream-ownership.md  chapter-5-transport-state-machine.md  chapter-6-control-path.md  chapter-7-config-negotiation.md  chapter-8-realtime-safe-chain.md  chapter-9-device-lifecycle.md
03_dsp/: Cargo.toml  book.toml
03_dsp/examples/: Cargo.toml
03_dsp/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-1-what-is-dsp.md  chapter-2-oscillator.md  chapter-3-envelope.md  chapter-4-antialiasing.md  chapter-5-biquad.md
03_dsp_fundamentals/examples/: Cargo.toml
03_dsp_fundamentals/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-what-is-dsp.md  chapter-3-sample-and-buffer-flow.md  chapter-4-oscillators-and-phase.md  chapter-5-gain-pan-mixer.md  chapter-6-envelope.md  chapter-7-delay-buffer.md  chapter-8-examples.md  chapter-9-review.md
04_mod_mastering_math/examples/: Cargo.toml
04_mod_mastering_math/examples/src/: lib.rs
04_mod_mastering_math/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-goal.md  chapter-3-db-peak-rms.md  chapter-4-compressor-structure.md  chapter-5-limiter-true-peak.md  chapter-6-lufs-overview.md  chapter-7-examples.md  chapter-8-review.md
05_eq_biquad/examples/: Cargo.toml
05_eq_biquad/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-eq-and-filter.md  chapter-3-biquad-structure.md  chapter-4-rbj-cookbook.md  chapter-5-parametric-eq-smoothing.md  chapter-6-examples.md  chapter-7-review.md
06_fft_and_spectrum/examples/: Cargo.toml
06_fft_and_spectrum/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-what-fft-shows.md  chapter-3-window-and-stft.md  chapter-4-dbfs-and-data.md  chapter-5-examples.md  chapter-6-review.md
07_audio_file_io/: book.toml
07_audio_file_io/examples/: Cargo.toml
07_audio_file_io/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-file-audio-flow.md  chapter-3-wav-and-sample-format.md  chapter-4-compressed-decoding.md  chapter-5-src.md  chapter-6-examples.md  chapter-7-review.md
08_audio_graph_architecture/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-why-graph.md  chapter-3-node-and-buffer.md  chapter-4-dag-order.md  chapter-5-mixer-bus-master.md  chapter-6-examples.md  chapter-7-review.md
09_midi_integration/examples/: Cargo.toml
09_midi_integration/src/: README.md  SUMMARY.md  chapter-0-how-to-read.md  chapter-2-midi-vs-audio.md  chapter-3-midi-messages.md  chapter-4-event-to-sound.md  chapter-5-sequencing.md  chapter-6-examples.md  chapter-7-review.md
10_plugin_architecture/src/: README.md  (+8 more)
11_ui_audio_integration/examples/: Cargo.toml
(+18 files in other folders)
